feat: add resume detail API
